--- a/views/layouts/sysinfo/overview.pug
+++ b/views/layouts/sysinfo/overview.pug
@@ -168,4 +168,4 @@ block content
             .col-md-12.text-right
               button#exportText.btn.btn-primary(name='exportText')
                 span.fa.fa-file-text(aria-hidden='true')
-                | Export to text file
+                | &nbsp; Export to text file
