--- a/views/layouts/profile/profile.pug
+++ b/views/layouts/profile/profile.pug
@@ -147,10 +147,10 @@ block content
                     input#edit-password.form-control(type='password', name="password" placeholder='Password')
                   .form-group
                     label.control-label(for='password') New password
-                    input#edit-newpassword.form-control(type='password', name="newpassword" placeholder='Password')
+                    input#edit-newpassword.form-control(type='password', name="newpassword" placeholder='New password')
                   .form-group
                     label.control-label(for='repeat-password') Repeat Password
-                    input#edit-repeat-password.form-control(type='repeat-password', placeholder='Password')
+                    input#edit-repeat-password.form-control(type='password', placeholder='Password')
                   button.btn.btn-primary.btn-lg.btn-block#changePassword(type='button') Update
               #info.tab-pane
                 form.form-auth-small(action='/account/edit/info')
