--- a/views/layouts/profile/profile.pug
+++ b/views/layouts/profile/profile.pug
@@ -150,7 +150,7 @@ block content
                     input#edit-newpassword.form-control(type='password', name="newpassword" placeholder='New password')
                   .form-group
                     label.control-label(for='repeat-password') Repeat Password
-                    input#edit-repeat-password.form-control(type='password', placeholder='Password')
+                    input#edit-repeat-password.form-control(type='password', placeholder='Retype password')
                   button.btn.btn-primary.btn-lg.btn-block#changePassword(type='button') Update
               #info.tab-pane
                 form.form-auth-small(action='/account/edit/info')
