add chart for memory

--- a/views/layouts/sysinfo/general.pug
+++ b/views/layouts/sysinfo/general.pug
@@ -98,7 +98,7 @@ block content
                 button.btn-toggle-collapse(type='button')
                   i.lnr.lnr-chevron-up
             .panel-body
-              #visits-trends-chart.ct-chart
+              #memory-usage-chart.ct-chart
           // END MULTI CHARTS
 block scripts
   script.
