--- a/views/layouts/sysinfo/memory.pug
+++ b/views/layouts/sysinfo/memory.pug
@@ -41,6 +41,8 @@ block content
                     li
                       | Total 
                       span.data #{total}
+                    | Total 
+                    span.data #{total}
                     li
                       | Free 
                       span.data #{free}
