--- a/views/layouts/sysinfo/memory.pug
+++ b/views/layouts/sysinfo/memory.pug
@@ -2,7 +2,7 @@ extends ../../layouts/layout.pug
 
 
 block link
-  -var selected = '/admin/memory';
+  -var selected = '/admin/memory'
 
 block content
 
