Test result disk

--- a/views/layouts/sysinfo/disk.pug
+++ b/views/layouts/sysinfo/disk.pug
@@ -43,7 +43,7 @@ block content
                       th use
                       th mount
                   tbody
-                    each val in filesystem
+                    each val in device
                       tr
                         td= val.fs
                         td= val.type
