Edited View disk.pug

--- a/views/layouts/sysinfo/disk.pug
+++ b/views/layouts/sysinfo/disk.pug
@@ -71,7 +71,7 @@ block content
                       i.fa.fa-clock-o
                       |  Last updated: 2 minutes ago
                   .col-md-6.text-right
-                    a.btn.btn-primary(href='#') View more processes
+                    a.btn.btn-primary(href='#') View more devices
           .col-md-12
             // MULTI CHARTS
             .panel
