--- a/views/layouts/sysinfo/disk.pug
+++ b/views/layouts/sysinfo/disk.pug
@@ -56,7 +56,7 @@ block content
                         td= val.type
                         td= val.fstype
                         td= val.mount
-                        td= val.data
+                        td.data= val.size
                         td= val.physical
                         td= val.uuid
                         td= val.label
