--- a/views/layouts/sysinfo/disk.pug
+++ b/views/layouts/sysinfo/disk.pug
@@ -57,10 +57,10 @@ block content
             // MULTI CHARTS
             .panel
               .panel-heading
-                h3.panel-title Memory Usage
+                h3.panel-title I/O Transfer Rate
                 .right
                   button.btn-toggle-collapse(type='button')
                     i.lnr.lnr-chevron-up
               .panel-body
-                #visits-trends-chart.ct-chart
+                #iochart.ct-chart
             // END MULTI CHARTS
